sjengida/g1/init_game
/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/init_game/src/utils.c:836:23: error: use of undeclared identifier 'unk_41D940'
qmemcpy( init_board, &unk_41D940, sizeof( init_board)); 
                      ^
1 error generated.
make: *** [/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/init_game/src/obj/utils.o] Error 1
